[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/salesman.png" type="Texture" id=1]
[ext_resource path="res://Bonus.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.0174, 31.8635 )

[node name="Bonus" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EvasivePattern" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Bonus_body_entered"]
[connection signal="timeout" from="EvasivePattern" to="." method="_on_EvasivePattern_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
